--- a/VisualPlus/VisualPlus.csproj
+++ b/VisualPlus/VisualPlus.csproj
@@ -54,6 +54,8 @@
     <Compile Include="EventArgs\MouseStateEventArgs.cs" />
     <Compile Include="EventArgs\ColorEventArgs.cs" />
     <Compile Include="Extensibility\StringExtension.cs" />
+    <Compile Include="Structure\ControlColorState.cs" />
+    <Compile Include="Structure\ControlGradientState.cs" />
     <Compile Include="Toolkit\ActionList\BackupDesigner.cs" />
     <Compile Include="Toolkit\ActionList\VisualRichBoxTasks.cs" />
     <Compile Include="Toolkit\ActionList\VisualTextBoxTasks.cs" />
