--- a/VisualPlus/VisualPlus.csproj
+++ b/VisualPlus/VisualPlus.csproj
@@ -53,7 +53,9 @@
     <Compile Include="EventArgs\TextRenderingEventArgs.cs" />
     <Compile Include="EventArgs\MouseStateEventArgs.cs" />
     <Compile Include="EventArgs\ColorEventArgs.cs" />
+    <Compile Include="EventArgs\ToggleEventArgs.cs" />
     <Compile Include="Extensibility\StringExtension.cs" />
+    <Compile Include="Renderer\ToggleButtonRenderer.cs" />
     <Compile Include="Structure\ControlColorState.cs" />
     <Compile Include="Structure\ControlGradientState.cs" />
     <Compile Include="Toolkit\ActionList\BackupDesigner.cs" />
