--- a/VisualPlus/VisualPlus.csproj
+++ b/VisualPlus/VisualPlus.csproj
@@ -85,10 +85,11 @@
     <Compile Include="Extensibility\PointExtension.cs" />
     <Compile Include="Extensibility\RectangleExtension.cs" />
     <Compile Include="Managers\StyleManager.cs" />
-    <Compile Include="Toolkit\Components\Badge.cs" />
+    <Compile Include="Toolkit\Components\Badge.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Structure\Border.cs" />
     <Compile Include="Structure\Shape.cs" />
-    <Compile Include="Delegates\BadgeDelegate.cs" />
     <Compile Include="Delegates\BorderDelegate.cs" />
     <Compile Include="Delegates\ControlExpandableDelegate.cs" />
     <Compile Include="Delegates\GradientDelegate.cs" />
