--- a/VisualPlus/VisualPlus.csproj
+++ b/VisualPlus/VisualPlus.csproj
@@ -219,7 +219,7 @@
     <Compile Include="Toolkit\Controls\Interactivity\VisualTrackBar.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="GDI.cs" />
+    <Compile Include="Managers\GDI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Toolkit\Controls\Interactivity\VisualKnob.cs">
       <SubType>UserControl</SubType>
