Improved: Designer code

--- a/VisualPlus/VisualPlus.csproj
+++ b/VisualPlus/VisualPlus.csproj
@@ -86,12 +86,12 @@
     <Compile Include="Structure\ColorState.cs" />
     <Compile Include="Structure\Hatch.cs" />
     <Compile Include="Structure\TextState.cs" />
-    <Compile Include="Toolkit\ActionList\VisualCheckedListBoxTasks.cs" />
-    <Compile Include="Toolkit\ActionList\VisualRichBoxTasks.cs" />
-    <Compile Include="Toolkit\ActionList\VisualTextBoxTasks.cs" />
-    <Compile Include="Toolkit\ActionList\VisualListViewTasks.cs" />
-    <Compile Include="Toolkit\ActionList\VisualComboBoxTasks.cs" />
-    <Compile Include="Toolkit\ActionList\VisuaListBoxTasks.cs" />
+    <Compile Include="Designer\ActionList\VisualCheckedListBoxActionList.cs" />
+    <Compile Include="Designer\VisualCheckedListBoxDesigner.cs" />
+    <Compile Include="Designer\ActionList\VisualRichBoxActionList.cs" />
+    <Compile Include="Designer\ActionList\VisualTextBoxActionList.cs" />
+    <Compile Include="Designer\ActionList\VisualListViewActionList.cs" />
+    <Compile Include="Designer\ActionList\VisuaListBoxActionList.cs" />
     <Compile Include="Toolkit\Components\VisualGradient.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -102,6 +102,8 @@
     <Compile Include="Toolkit\Controls\DataVisualization\VisualGauge.cs" />
     <Compile Include="Toolkit\Controls\DataVisualization\VisualProgressStepper.cs" />
     <Compile Include="Toolkit\Controls\Interactivity\VisualRangeBar.cs" />
+    <Compile Include="Designer\ActionList\VisualComboBoxActionList.cs" />
+    <Compile Include="Designer\VisualComboBoxDesigner.cs" />
     <Compile Include="Toolkit\VisualBase\BadgeLabel.cs" />
     <Compile Include="Toolkit\Components\Expander.cs">
       <SubType>Component</SubType>
@@ -139,29 +141,28 @@
     <Compile Include="Delegates\ControlDelegate.cs" />
     <Compile Include="Delegates\ControlDragDelegate.cs" />
     <Compile Include="EventArgs\DragControlEventArgs.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualCircleProgressBarDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualContextMenuDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualLabelDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualRatingDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualListBoxDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualListViewDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualToolTipDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualFormDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualTrackBarDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualToggleDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualTextBoxDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualTabControlDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualSeparatorDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualRichTextBoxDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualRadioButtonDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualProgressIndicatorDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualProgressBarDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualPanelDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualNumericUpDownDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualGroupBoxDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualComboBoxDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualButtonDesigner.cs" />
-    <Compile Include="Toolkit\PropertyFilter\VisualCheckBoxDesigner.cs" />
+    <Compile Include="Designer\VisualCircleProgressBarDesigner.cs" />
+    <Compile Include="Designer\VisualContextMenuDesigner.cs" />
+    <Compile Include="Designer\VisualLabelDesigner.cs" />
+    <Compile Include="Designer\VisualRatingDesigner.cs" />
+    <Compile Include="Designer\VisualListBoxDesigner.cs" />
+    <Compile Include="Designer\VisualListViewDesigner.cs" />
+    <Compile Include="Designer\VisualToolTipDesigner.cs" />
+    <Compile Include="Designer\VisualFormDesigner.cs" />
+    <Compile Include="Designer\VisualTrackBarDesigner.cs" />
+    <Compile Include="Designer\VisualToggleDesigner.cs" />
+    <Compile Include="Designer\VisualTextBoxDesigner.cs" />
+    <Compile Include="Designer\VisualTabControlDesigner.cs" />
+    <Compile Include="Designer\VisualSeparatorDesigner.cs" />
+    <Compile Include="Designer\VisualRichTextBoxDesigner.cs" />
+    <Compile Include="Designer\VisualRadioButtonDesigner.cs" />
+    <Compile Include="Designer\VisualProgressIndicatorDesigner.cs" />
+    <Compile Include="Designer\VisualProgressBarDesigner.cs" />
+    <Compile Include="Designer\VisualPanelDesigner.cs" />
+    <Compile Include="Designer\VisualNumericUpDownDesigner.cs" />
+    <Compile Include="Designer\VisualGroupBoxDesigner.cs" />
+    <Compile Include="Designer\VisualButtonDesigner.cs" />
+    <Compile Include="Designer\VisualCheckBoxDesigner.cs" />
     <Compile Include="Toolkit\Controls\Interactivity\VisualButton.cs" />
     <Compile Include="Toolkit\Controls\Interactivity\VisualCheckBox.cs" />
     <Compile Include="Toolkit\Controls\Editors\VisualColorPicker.cs" />
@@ -238,6 +239,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Collections\" />
     <Folder Include="Toolkit\Dialogs\" />
   </ItemGroup>
   <ItemGroup>
